# Labwork6-ITMO

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  json.cpp  json.h  parser.cpp  parser.h  response.cpp  response.h
